@@ -13,6 +13,7 @@ It has been supported by the ANR
 
 ----------------------------------------------------
 Version 1.23
+- new dshear method
 - fix synchronization issue with arcs (not visible when synchronized)
 - fix crash bug with 'set' messages addressed to /ITL/*/anobject
 
